network/aws_eip.tf
resource "aws_eip" "nat_gateway_0" {
  vcp        = true
  depends_on = [aws_internet_gateway.example]
}

resource "aws_eip" "nat_gateway_1" {
  vpc        = true
  depends_on = [aws_internet_gateway.example]
}
